catalog.html: исправлены ошибки с label и ошибки с незакрытым тегом

--- a/catalog.html
+++ b/catalog.html
@@ -92,11 +92,11 @@
             <fieldset class="manufacturers">
               <legend>Производители</legend>
               <ul>
-                <label><li><input type="checkbox" name="manufacturers[]" value="bosh" checked>BOSH</li></label>
-                <label><li><input type="checkbox" name="manufacturers[]" value="interskol">ИНТЕРСКОЛ</li></label>
-                <label><li><input type="checkbox" name="manufacturers[]" value="makita" checked>MAKITA</li></label>
-                <label><li><input type="checkbox" name="manufacturers[]" value="dewalt">DEWALT</li></label>
-                <label><li><input type="checkbox" name="manufacturers[]" value="hitachi">HITACHI</li></label>
+                <li><label><input type="checkbox" name="manufacturers[]" value="bosh" checked>BOSH</label></li>
+                <li><label><input type="checkbox" name="manufacturers[]" value="interskol">ИНТЕРСКОЛ</label></li>
+                <li><label><input type="checkbox" name="manufacturers[]" value="makita" checked>MAKITA</label></li>
+                <li><label><input type="checkbox" name="manufacturers[]" value="dewalt">DEWALT</label></li>
+                <li><label><input type="checkbox" name="manufacturers[]" value="hitachi">HITACHI</label></li>
               </ul>
             </fieldset><!--конец ПРОИЗВОДИТЕЛИ фильтр-->
 
@@ -104,9 +104,9 @@
             <fieldset class="supply">
               <legend>Питание</legend>
               <ul>
-                <label><li><input type="radio" name="supply" value="battery-supply" checked>Аккумуляторные</li></label>
-                <label><li><input type="radio" name="supply" value="general-supply">Сетевые</li>
-              </ul></label>
+                <li><label><input type="radio" name="supply" value="battery-supply" checked>Аккумуляторные</label></li>
+                <li><label><input type="radio" name="supply" value="general-supply">Сетевые</label></li>
+              </ul>
             </fieldset><!--конец ПИТАНИЕ фильтр-->
 
             <input type="submit" value="Показать">
@@ -248,6 +248,8 @@
             <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
           </p>
         </address>
+      </div>
+    </footer>
 
     
   </body>
