исправления в html; переделан файл стилей()
стили шрифтов
не доделаны

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
        <!--СЛАЙДЕР-->
           <div class="slider">
             <div class="slide1">
-              <h4>Перфораторы</h4>
+              <span>Перфораторы</span>
               <p>Настоящие мужские игрушки</p>
               <a href="#" class="btn">Открыть каталог</a>
             </div>
             <div class="slide2">
-              <h4>Дрели</h4>
+              <span>Дрели</span>
               <p>Соседям на радость</p>
               <a href="#" class="btn">Открыть каталог</a>
             </div>
@@ -115,43 +115,43 @@
      <!--ПОПУЛЯРНЫЕ ТОВАРЫ-->
       <section>
 
-        <div class="wrapper">
+        <div class="popular">
           <h2>Популярные товары</h2>
-          <a href="#" class="btn popular">Все популярные товары</a>
+          <a href="#" class="btn ">Все популярные товары</a>
         </div>
         
         <ul>
           <li>
             <a href="#"><img src="img/content/tools/bfg-9000.jpg" alt="Перфоратор BOSH BFG 9000" width="184" height="164" ></a>
             <a href="#">Перфоратор BOSH BFG 9000</a>
-            <s class="price-old">32500</s>
-            <span class="price-new">25500</span>
+            <s class="price old-price">32500</s>
+            <span class="price new-price">25500</span>
           </li>
           <li>
             <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
             <a href="#">Перфоратор BOSH BFG 3000</a>
-            <s class="price-old">22500</s>
-            <span class="price-new">15500</span>
+            <s class="price old-price">22500</s>
+            <span class="price new-price">15500</span>
           </li>
           <li>
             <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
             <a href="#">Перфоратор BOSH BFG 6000</a>
-            <s class="price-old">30500</s>
-            <span class="price-new">25500</span>
+            <s class="price old-price">30500</s>
+            <span class="price new-price">25500</span>
           </li>
           <li>
             <a href="#"><img src="img/content/tools/bfg-2000.jpg" class="new" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
             <a href="#">Перфоратор BOSH BFG 2000</a>
-            <span class="price-new">12500</span>
+            <span class="price new-price">12500</span>
           </li>
         </ul>
       </section><!--конец ПОПУЛЯРНЫЕ ТОВАРЫ-->
 
       <!--ПЛПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ-->
       <section>
-        <div class="wrapper">
+        <div class="popular">
           <h2>Популярные производители</h2>
-          <a href="#" class="btn popular">Все производители</a>
+          <a href="#" class="btn ">Все производители</a>
         </div>
 
         <ul>
