добавил стили ШРИФТОВ/ убрал метки списка

--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
         <!--ФИЛЬТР-->
         <form action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
-            <legend>Фильтр</legend>
+            <legend class="filter">Фильтр</legend>
             <fieldset class="cost-filter">
               <legend>Цена</legend>
                 <input type="range" name="max-cost" class="range-cost" value="30000" min="0" max="50000">
@@ -110,7 +110,7 @@
               </ul>
             </fieldset><!--конец ПИТАНИЕ фильтр-->
 
-            <input type="submit" value="Показать">
+            <input type="submit" class="filter btn" value="Показать" >
           </fieldset>
         </form><!--конец ФИЛЬТР-->
 
@@ -129,55 +129,55 @@
           <ul class="items">
             <li>
               <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
-              <a href="#">Перфоратор BOSH BFG 3000</a>
-              <s class="price-old">22500 Р.</s>
-              <span class="price-new">15500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 3000</a>
+              <s class="price old-price">22500 Р.</s>
+              <span class="price new-price">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
-              <a href="#">Перфоратор BOSH BFG 6000</a>
-              <s class="price-old">30500 Р.</s>
-              <span class="price-new">25500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 6000</a>
+              <s class="price old-price">30500 Р.</s>
+              <span class="price new-price">25500 Р.</span>
             </li>
             <li>
               <a href="#" class="btn">Купить</a>
               <a href="#" class="btn">В закладки</a>
-              <a href="#">Перфоратор BOSH BFG 2000</a>
-              <span class="price-new">12500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 2000</a>
+              <span class="price new-price">12500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
-              <a href="#">Перфоратор BOSH BFG 3000</a>
-              <s class="price-old">22500 Р.</s>
-              <span class="price-new">15500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 3000</a>
+              <s class="price old-price">22500 Р.</s>
+              <span class="price new-price">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
-              <a href="#">Перфоратор BOSH BFG 6000</a>
-              <s class="price-old">30500 Р.</s>
-              <span class="price-new">25500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 6000</a>
+              <s class="price old-price">30500 Р.</s>
+              <span class="price new-price">25500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-2000.jpg" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
-              <a href="#">Перфоратор BOSH BFG 2000</a>
-              <span class="price-new">12500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 2000</a>
+              <span class="price new-price">12500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-3000.jpg" alt="Перфоратор BOSH BFG 3000" width="127" height="112"></a>
-              <a href="#">Перфоратор BOSH BFG 3000</a>
-              <s class="price-old">22500 Р.</s>
-              <span class="price-new">15500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 3000</a>
+              <s class="price old-price">22500 Р.</s>
+              <span class="price new-price">15500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-6000.jpg" alt="Перфоратор BOSH BFG 6000" width="144" height="128"></a>
-              <a href="#">Перфоратор BOSH BFG 6000</a>
-              <s class="price-old">30500 Р.</s>
-              <span class="price-new">25500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 6000</a>
+              <s class="price old-price">30500 Р.</s>
+              <span class="price new-price">25500 Р.</span>
             </li>
             <li>
               <a href="#"><img src="img/content/tools/bfg-2000.jpg" alt="Перфоратор BOSH BFG 2000" width="127" height="112"></a>
-              <a href="#">Перфоратор BOSH BFG 2000</a>
-              <span class="price-new">12500 Р.</span>
+              <a href="#" class="item-name">Перфоратор BOSH BFG 2000</a>
+              <span class="price new-price">12500 Р.</span>
             </li>
           </ul>
         </div><!--конец ВЫБРАННЫЙ ТОВАР-->
