--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Техномарт-Каталог</title>
-
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet"  href="css/style.css">
   </head>
   <body>
     <!--HEADER-->
