--- a/catalog.html
+++ b/catalog.html
@@ -16,23 +16,26 @@
         <div class="top-header">
                 
           <!--ЛОГОТИП-->
-          <div class="logo">
+          <!-- <div class="logo">
             <a href="index.html" ><h1>Техномарт</h1></a>
-          </div>
+          </div> -->
           
-          <ul>
-            <li>
+          <ul class="menu clearfix">
+            <li class="logo left">
+              <a  href="index.html" ><h1>Техномарт</h1></a>
+            </li>
+            <li class="logo left">
               <form action="https://echo.htmlacademy.ru" method="post">
                 <input type="search" placeholder="Поиск:" name="search">
               </form>
             </li>
-            <li>
+            <li class="left">
               <a href="#">Закладки: <span class="bookmarks-quantity">0</span></a>
             </li>
-            <li>
+            <li class="left">
               <a href="#">Корзина: <span class="basket-quantity">10</span></a>
             </li>
-            <li>
+            <li class="left">
               <a href="#" class="checkout btn">Оформить заказ</a>
             </li>
           </ul>
