--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <title>Техномарт-Каталог</title>
     
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/font-face.css">
     <link rel="stylesheet"  href="css/style.css">
   </head>
   <body>
