--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Техномарт</title>
 
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/font-face.css">
     <link rel="stylesheet"  href="css/style.css">
   </head>
   <body>
@@ -67,6 +68,7 @@
      
       </div>
     </header><!--КОНЕЦ  ХЕДЕРА-->
+    
     <main>
       <!--ПРЕДЛОЖЕНИЯ-->
       <div class="container">
