--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
           <!-- Поиск по сайту -->
           <form class="header__search  search  left-side" action="https://echo.htmlacademy.ru">
-            <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:">
+            <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:"></input>
           </form>     
 
           <!-- ОФОРМИТЬ ЗАКАЗ -->
           <ul class="header__checkout  checkout  right-side">
             <li class="checkout__item">
               <a class="checkout__bookmarks" href="#">Закладки: 0</a>
-              </li>
-            <li class="checkout__item">
+            </li><!--
+         --><li class="checkout__item">
               <a class="checkout__basket" href="#">Корзина: 0</a>
-              </li>
-            <li class="checkout__item"><a class="checkout__btn" href="#">Оформить заказ</a></li>
-          </ul> 
+              </li><!--
+            --><li class="checkout__item"><a class="checkout__btn" href="#">Оформить заказ</a></li>
+          </ul> <!---->
 
         </div>
       </div><!--КОНЕЦ header__top-->
@@ -62,32 +62,32 @@
               <a href="#" class="login__btn  login__btn_in">Войти</a>
               <a href="#" class="login__btn  login__btn_reg">Регистрация</a>
             </div>
-          </div>
+           </div>
 
 
           <nav class="header__navigation  navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
                 <a class="navigation__item-main navigation__link">Главная</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+            --><li class="navigation__item">
                 <a class="navigation__item-company  navigation__link">Компания</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+           --><li class="navigation__item">
                 <a class="navigation__item-catalog  navigation__link">Каталог</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+           --><li class="navigation__item">
                 <a class="navigation__item-news  navigation__link">Новости</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+           --><li class="navigation__item">
                 <a class="navigation__item-propositions  navigation__link">Спецпредложения</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+           --><li class="navigation__item">
                 <a class="navigation__item-delivery  navigation__link">Доставка</a>
-              </li>
-              <li class="navigation__item">
+              </li><!--
+           --><li class="navigation__item">
                 <a class="navigation__item-contacts  navigation__link">Контакты</a>
-              </li>
+              </li><!---->
             </ul>
           </nav>
         </div>
