исправлены ошибки иконку в поиске заменил кнопкой

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <!-- Поиск по сайту -->
           <form class="header__search  search  left-side" action="https://echo.htmlacademy.ru">
             <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:"></input>
+            <button class="serch__btn" type="submit">Поиск</button>
           </form>     
 
           <!-- ОФОРМИТЬ ЗАКАЗ -->
