реализовал меню через nth-child, убрал лишние классы в хтмл

--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
           <nav class="header__navigation  navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a class="navigation__item-main navigation__link">Главная</a>
+                <a class="navigation__link">Главная</a>
               </li><!--
             --><li class="navigation__item">
-                <a class="navigation__item-company  navigation__link">Компания</a>
+                <a class="navigation__link">Компания</a>
               </li><!--
            --><li class="navigation__item">
-                <a class="navigation__item-catalog  navigation__link">Каталог</a>
+                <a class="navigation__link">Каталог</a>
               </li><!--
            --><li class="navigation__item">
-                <a class="navigation__item-news  navigation__link">Новости</a>
+                <a class="navigation__link">Новости</a>
               </li><!--
            --><li class="navigation__item">
-                <a class="navigation__item-propositions  navigation__link">Спецпредложения</a>
+                <a class="navigation__link">Спецпредложения</a>
               </li><!--
            --><li class="navigation__item">
-                <a class="navigation__item-delivery  navigation__link">Доставка</a>
+                <a class="navigation__link">Доставка</a>
               </li><!--
            --><li class="navigation__item">
-                <a class="navigation__item-contacts  navigation__link">Контакты</a>
+                <a class="navigation__link">Контакты</a>
               </li><!---->
             </ul>
           </nav>
