--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <!-- Поиск по сайту -->
           <form class="header__search  search  left-side" action="https://echo.htmlacademy.ru">
             <input class="search__search-field" type="search" name="search-request" placeholder="Поиск:"></input>
-            <button class="serch__btn" type="submit">Поиск</button>
+
+            <!-- РЕАЛИЗАЦИЯ ИКОНКИ В СТРОКЕ ПОИСКА В ВИДЕ КНОПКИ -->
+            <!-- <button class="serch__btn" type="submit">Поиск</button> -->
           </form>     
 
           <!-- ОФОРМИТЬ ЗАКАЗ -->
