добавлен htm футера

--- a/index.html
+++ b/index.html
@@ -68,34 +68,101 @@
            </div>
 
 
-          <nav class="header__navigation  navigation">
-            <ul class="navigation__list">
-              <li class="navigation__item">
-                <a class="navigation__link">Главная</a>
+          <nav class="navigation-main">
+            <ul class="navigation-main__list">
+              <li class="navigation-main__item">
+                <a class="navigation-main__link">Главная</a>
               </li><!--
-            --><li class="navigation__item">
-                <a class="navigation__link">Компания</a>
+            --><li class="navigation-main__item">
+                <a class="navigation-main__link">Компания</a>
               </li><!--
-           --><li class="navigation__item">
-                <a class="navigation__link">Каталог</a>
+           --><li class="navigation-main__item">
+                <a class="navigation-main__link">Каталог</a>
               </li><!--
-           --><li class="navigation__item">
-                <a class="navigation__link">Новости</a>
+           --><li class="navigation-main__item">
+                <a class="navigation-main__link">Новости</a>
               </li><!--
-           --><li class="navigation__item">
-                <a class="navigation__link">Спецпредложения</a>
+           --><li class="navigation-main__item">
+                <a class="navigation-main__link">Спецпредложения</a>
               </li><!--
-           --><li class="navigation__item">
-                <a class="navigation__link">Доставка</a>
+           --><li class="navigation-main__item">
+                <a class="navigation-main__link">Доставка</a>
               </li><!--
-           --><li class="navigation__item">
-                <a class="navigation__link">Контакты</a>
+           --><li class="navigation-main__item">
+                <a class="navigation-main__link">Контакты</a>
               </li><!---->
             </ul>
           </nav>
         </div>
       </div>
-    </header>
+    </header><!--END HEADER-->
+
+
+
+
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer__top">
+        <div class="wrapper">
+          <div class="footer__logo">
+            <a class="logo" href="index.html">Техномарт</a>
+          </div>
+
+
+          <nav class="navigatiom-footer">
+            <ul>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+
+            <ul>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+            </ul>
+          </nav>
+
+
+          <address>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            +7 (812) 555-05-55<br>
+          </address>
+        </div>
+        </div><!--END FOOTER__TOP-->
+
+
+        <div class="foter__bottom">
+          <div class="wrapper">
+            <small class="copyright">
+               &copy; 2010–2016 Компания «Техномарт»<br>
+               Все права защищены
+            </small>
+
+
+            <address>
+              <div class="social">
+                <a href="https://vk.com/htmlacademy" class="social-btn  social-btn__vk">ВКонтакте</a>
+                <a href="https://www.facebook.com/htmlacademy" class="social-btn  social-btn__fb">Facebook</a>
+                <a href="https://www.instagram.com/htmlacademy" class="social-btn  social-btn__inst">Instagram</a>
+              </div>
+
+              <div class="feedback">
+                <a href="mailto:mail@htmlacademy">mail@htmlacademy</a>
+              </div>
+
+              <div class="developer">
+                <a href="https://htmlacademy.ru/">htmlacademy.ru</a>  
+              </div>
+              
+            </address>
+          </div>
+        </div>
+    </footer>
 
   </body>
 
