сделаны стили для футера

--- a/index.html
+++ b/index.html
@@ -103,32 +103,32 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="footer__top">
+      <div class="footer__top  clearfix">
         <div class="wrapper">
           <div class="footer__logo">
-            <a class="logo" href="index.html">Техномарт</a>
+            <a class="logo  logo__beeg" href="index.html">Техномарт</a>
           </div>
 
 
-          <nav class="navigatiom-footer">
-            <ul>
-              <li><a href="#">Компания</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="#">Каталог</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
+          <nav class="navigation-footer right-side ">
+            <ul class="clearfix">
+              <li class="left-side"><a class="navigation-footer__link" href="#">Компания</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Новости</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Каталог</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Доставка</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Контакты</a></li>
             </ul>
 
-            <ul>
-              <li><a href="#">Материалы</a></li>
-              <li><a href="#">Техника</a></li>
-              <li><a href="#">Инструмент</a></li>
-              <li><a href="#">Спецпредложения</a></li>
+            <ul class="clearfix">
+              <li class="left-side"><a class="navigation-footer__link" href="#">Материалы</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Техника</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Инструмент</a></li>
+              <li class="left-side"><a class="navigation-footer__link" href="#">Спецпредложения</a></li>
             </ul>
           </nav>
 
 
-          <address>
+          <address class="contacts-footer">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7 (812) 555-05-55<br>
           </address>
@@ -136,26 +136,28 @@
         </div><!--END FOOTER__TOP-->
 
 
-        <div class="foter__bottom">
-          <div class="wrapper">
-            <small class="copyright">
+        <div class="footer__bottom">
+          <div class="wrapper clearfix">
+            <small class="copyright left-side">
                &copy; 2010–2016 Компания «Техномарт»<br>
                Все права защищены
             </small>
 
 
             <address>
-              <div class="social">
-                <a href="https://vk.com/htmlacademy" class="social-btn  social-btn__vk">ВКонтакте</a>
-                <a href="https://www.facebook.com/htmlacademy" class="social-btn  social-btn__fb">Facebook</a>
-                <a href="https://www.instagram.com/htmlacademy" class="social-btn  social-btn__inst">Instagram</a>
+              <div class="social left-side">
+                <a href="https://vk.com/htmlacademy" class="social-btn  social-btn_vk">ВКонтакте</a>
+                <a href="https://www.facebook.com/htmlacademy" class="social-btn  social-btn_fb">Facebook</a>
+                <a href="https://www.instagram.com/htmlacademy" class="social-btn  social-btn_inst">Instagram</a>
               </div>
 
-              <div class="feedback">
-                <a href="mailto:mail@htmlacademy">mail@htmlacademy</a>
+              <div class="feedback  left-side ">
+                Обратная связь:<br>
+                <a href="mailto:mail@htmlacademy">mail@htmlacademy.ru</a>
               </div>
 
-              <div class="developer">
+              <div class="feedback developed right-side">
+                Разработано-<br>
                 <a href="https://htmlacademy.ru/">htmlacademy.ru</a>  
               </div>
               
