--- a/index.html
+++ b/index.html
@@ -101,6 +101,197 @@
 
 
 
+    <main>
+
+      <!--ПРЕДЛОЖЕНИЯ -->
+      <ul class="offers">
+        <li class="offers__materials">
+          <span class="new">new</span>
+          <h2>Матерриалы</h2>
+          <a href="#" class="offers__btn">На любой вкус</a>
+        </li>
+        <li class="offers__instruments">
+          <h2>Инструмент</h2>
+          <a href="#" class="offers__btn">На все слечаи</a>
+        </li>
+        <li class="offers__technics">
+          <h2>Техника</h2>
+          <a href="#" class="offers__btn">Для стройки</a>
+        </li>
+        <li class="offers__sale">
+          <h2>Скидки 50%</h2>
+          <a href="#" class="offers__btn">На 350 товаров</a>
+        </li>
+        <li class="offers__delivery">
+          <h2>Доставка</h2>
+          <a href="#" class="offers__btn">Бесплатно</a>
+        </li>
+      </ul>
+
+
+      <!--СЛАЙДЕР-->
+      <div class="slider">
+        <div class="slider__slide-1">
+          <h4 class="slider__slide-caption">Перфораторы</h4>
+          <p class="slider__slide-slogan">Настоящие мужские игрушки</p>
+          <a href="#" class="slider__btn">Открыть каталог</a>
+        </div>
+
+        <div class="slider__slide-2">
+          <h4 class="slider__slide-caption">Дрели</h4>
+          <p class="slider__slide-slogan">Соседям на радость</p>
+          <a href="#" class="slider__btn">Открыть каталог</a>
+        </div>
+      </div>
+
+
+      <!-- ПОПУЛЯРНЫЕ -->
+      <artticle class="popular">
+        <div class="popular__items">
+          <h3 class="popular__caption">Товары</h3>
+          <a href="" class="popular__btn">Все товары</a>
+
+           <!-- ПОПУЛЯРНЫЕ ТОВАРЫ -->
+          <ul class="popular__items-list">
+            <li class="popular__item">
+              <div class="popular__item-img-container">
+                <a href="#">
+                  <img src="img/content//items/bfg-9000.jpg" alt="bfg-9000" width="184" height="164">
+                </a>
+              </div>
+              <a href="#">
+                <span class="popular__item-manufacturer">Перфоратор BOSCH</span>
+                <span class="popular__item-model">BFG 9000</span><br>
+              </a>
+              <del class="popular__item-price  popular__item-price_old">32500 Р.</del><br>
+              <span class="popular__item-price  popular__item-price_new">25500 Р.</span>
+            </li>
+
+            <li class="popular__item">
+              <div class="popular__item-img-container">
+                <a href="#">
+                  <img src="img/content//items/bfg-3000.jpg" alt="bfg-3000" width="127" height="112">
+                </a>
+              </div>
+              <a href="#">
+                <span class="popular__item-manufacturer">Перфоратор BOSCH</span>
+                <span class="popular__item-model">BFG 3000</span><br>
+              </a>
+              <del class="popular__item-price  popular__item-price_old">22500 Р.</del><br>
+              <span class="popular__item-price  popular__item-price_new">15500 Р.</span>
+            </li>
+
+            <li class="popular__item">
+              <div class="popular__item-img-container">
+                <a href="#">
+                  <img src="img/content//items/bfg-6000.jpg" alt="bfg-6000" width="144" height="128">
+                </a>
+              </div>
+              <a href="#">
+                <span class="popular__item-manufacturer">Перфоратор BOSCH</span>
+                <span class="popular__item-model">BFG 6000</span><br>
+              </a>
+              <del class="popular__item-price  popular__item-price_old">30500 Р.</del><br>
+              <span class="popular__item-price  popular__item-price_new">22500 Р.</span>
+            </li>
+
+            <li class="popular__item">
+              <span class="new">new</span>
+              <div class="popular__item-img-container">
+                <a href="#">
+                  <img src="img/content//items/bfg-2000.jpg" alt="bfg-2000" width="127" height="112">
+                </a>
+              </div>
+              <a href="#">
+                <span class="popular__item-manufacturer">Перфоратор BOSCH</span>
+                <span class="popular__item-model">BFG 2000</span><br>
+              </a>
+              <span class="popular__item-price  popular__item-price_new">12500 Р.</span>
+            </li>
+          </ul>
+        </div>
+
+
+        <div class="popular__manufacturers">
+          <h3 class="popular__caption">Производители</h3>
+          <a href="#" class="popular__btn">Все производители</a>
+
+          <ul class="popular__manufacturers-list">
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/bosch.jpg" alt="Bosh" width="126" height="37">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/Makita.jpg" alt="Makita" width="123" height="40">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/DeWALT.jpg" alt="DeWalt" width="146" height="44">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/intercol.jpg" alt="Interskol" width="200" height="88">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/Hitachi.jpg" alt="Hitachi" width="169" height="31">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/LG.jpg" alt="LG" width="121" height="73">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/AEG.jpg" alt="Aeg" width="151" height="96">
+                </a>
+              </div>
+            </li>
+
+            <li class="popular__manufacturer">
+              <div class="popular__manufacturers-img-container">
+                <a href="#">
+                  <img src="img/content/manufacturers/Metabo.jpg" alt="Metabo" width="204" height="69">
+                </a>
+              </div>
+            </li>
+            
+          </ul>
+        </div>
+      </artticle>
+
+
+    </main>
+
+
+
+
+
     <!-- FOOTER -->
     <footer>
       <div class="footer__top  clearfix">
